--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>Registrartion Details</title>
+  <title>Registration Form</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="text-center" style="background-color:rgb(26, 186, 207);">
