--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>Registration Form</title>
+  <title>Registrartion Details</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="text-center" style="background-color:rgb(26, 186, 207);">
@@ -34,6 +34,6 @@
     <div class="divide-y divide-gray-300/50" id="user-entries"></div>
   </div>
 </div>
-<script src="index.js"></script>
+<script src="indexc.js"></script>
 </body>
 </html>
