--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <div class="flex items-center mt-6">
       <input type="checkbox" name="acceptTerms" id="acceptTerms" class="mr-3">
-      <label for="acceptTerms" class="text-left">Please confirm that you agree to our terms and conditions.</label>
+      <label for="acceptTerms" class="text-left">Accept Terms & Condition</label>
     </div>
 
     <button required type="submit" class="mt-5 w-50 bg-gradient-to-r from-orange-500 to-yellow-400 text-white p-2 rounded-lg shadow-lg hover:bg-yellow-600 focus:outline-none focus:ring-2 focus:ring-blue-600 focus:ring-opacity-400">Submit</button>
